err/caterpillar-hls.err
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/caterpillar'...
Compiling './lib/python3.5/site-packages/caterpillar/caterpillar.py'...
***   File "./lib/python3.5/site-packages/caterpillar/caterpillar.py", line 42
    ADDITIONAL_HELP_TEXT = f'''
environment variables:
  CATERPILLAR_USER_CONFIG_DIR
                        custom directory for caterpillar.conf
  CATERPILLAR_USER_DATA_DIR
                        custom directory for certain data cached by
                        caterpillar
  CATERPILLAR_NO_USER_CONFIG
                        when set to a non-empty value, do not load
                        options from user config file
  CATERPILLAR_NO_CACHE  when set to a non-empty value, do not read or
                        write caterpillar's cache

configuration file:
  {USER_CONFIG_FILE}

'''
                               
                      
                             
                                                             
                           
                                                                   
                                   
                            
                                                                  
                                                     
                                                                     
                                                 

                   
                    

  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caterpillar/download.py'...
***   File "./lib/python3.5/site-packages/caterpillar/download.py", line 34
    logger.debug(f'GET {url}')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caterpillar/merge.py'...
***   File "./lib/python3.5/site-packages/caterpillar/merge.py", line 39
    logger.info(f'attempting to merge {m3u8_file} into {output}')
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caterpillar/persistence.py'...
***   File "./lib/python3.5/site-packages/caterpillar/persistence.py", line 49
    database.execute_sql(f'PRAGMA user_version = {SCHEMA_VERSION};')
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caterpillar/utils.py'...
***   File "./lib/python3.5/site-packages/caterpillar/utils.py", line 26
    exc_desc = f'{excname(exception)}: {exception}'
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caterpillar_hls-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/m3u8'...
Listing './lib/python3.5/site-packages/m3u8-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
